script/template/yaml/ori/dc-clean.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-02-11T02:25:09Z"
    generation: 2
    labels:
      app: quotesapi
    name: quotesapi
    namespace: kangbc-tw-ibm-com-quotes-dev
    resourceVersion: "45435730"
    selfLink: /apis/apps.openshift.io/v1/namespaces/kangbc-tw-ibm-com-quotes-dev/deploymentconfigs/quotesapi
    uid: b99bb428-4c75-11ea-96a5-0a580a810037
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: quotesapi
      deploymentconfig: quotesapi
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: quotesapi
          deploymentconfig: quotesapi
      spec:
        containers:
        - env:
          - name: DATABASE_NAME
            value: quotesdb
          - name: DATABASE_PASSWORD
            value: redhat
          - name: DATABASE_SERVICE_NAME
            value: quotesdb
          - name: DATABASE_USER
            value: quoteapp
          image: image-registry.openshift-image-registry.svc:5000/kangbc-tw-ibm-com-quotes-dev/quotesapi@sha256:b50e64d1bb11c1ba25dcdbbf1d4ca649b3ff7f3a7a56a6c8e902e18343e11445
          imagePullPolicy: Always
          name: quotesapi
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - quotesapi
        from:
          kind: ImageStreamTag
          name: quotesapi:latest
          namespace: kangbc-tw-ibm-com-quotes-dev
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/kangbc-tw-ibm-com-quotes-dev/quotesapi@sha256:b50e64d1bb11c1ba25dcdbbf1d4ca649b3ff7f3a7a56a6c8e902e18343e11445
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-02-11T02:27:56Z"
      lastUpdateTime: "2020-02-11T02:27:56Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-02-11T02:27:57Z"
      lastUpdateTime: "2020-02-11T02:27:57Z"
      message: replication controller "quotesapi-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-02-11T02:24:38Z"
    generation: 3
    labels:
      app: quotesdb
    name: quotesdb
    namespace: kangbc-tw-ibm-com-quotes-dev
    resourceVersion: "45434729"
    selfLink: /apis/apps.openshift.io/v1/namespaces/kangbc-tw-ibm-com-quotes-dev/deploymentconfigs/quotesdb
    uid: a70d8a86-4c75-11ea-96a5-0a580a810037
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: quotesdb
      deploymentconfig: quotesdb
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: quotesdb
          deploymentconfig: quotesdb
      spec:
        containers:
        - env:
          - name: MYSQL_DATABASE
            value: quotesdb
          - name: MYSQL_PASSWORD
            value: redhat
          - name: MYSQL_USER
            value: quoteapp
          image: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
          imagePullPolicy: IfNotPresent
          name: quotesdb
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: quotesdb-volume-1
          persistentVolumeClaim:
            claimName: quotesdb-claim
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - quotesdb
        from:
          kind: ImageStreamTag
          name: mysql:5.7
          namespace: openshift
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-02-11T02:25:07Z"
      lastUpdateTime: "2020-02-11T02:25:07Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-02-11T02:25:08Z"
      lastUpdateTime: "2020-02-11T02:25:08Z"
      message: replication controller "quotesdb-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
